[package]
name = "sysfs_gpio"
version = "0.5.4"
authors = ["Paul Osborne <osbpau@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-embedded/rust-sysfs-gpio"
homepage = "https://github.com/rust-embedded/rust-sysfs-gpio"
documentation = "http://rust-embedded.github.io/rust-sysfs-gpio/"
description = "Provides access to GPIOs using the Linux sysfs interface."
readme = "README.md"

[features]
mio-evented = ["mio"]
use_tokio = ["futures", "tokio", "mio-evented"]

[dependencies]
futures = { version = "0.1", optional = true }
nix = "0.14.0"
mio = { version = "0.6", optional = true }
tokio = { version = "0.1", optional = true }
